; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_isp1760-hcd.c_ehci_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/host/extr_isp1760-hcd.c_ehci_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isp1760_hcd = type { i32 }
%struct.usb_hcd = type { i64, i32 }

@HC_USBCMD = common dso_local global i64 0, align 8
@CMD_RESET = common dso_local global i32 0, align 4
@HC_STATE_HALT = common dso_local global i32 0, align 4
@jiffies = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.isp1760_hcd*)* @ehci_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ehci_reset(%struct.isp1760_hcd* %0) #0 {
  %2 = alloca %struct.isp1760_hcd*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.usb_hcd*, align 8
  %5 = alloca i32, align 4
  store %struct.isp1760_hcd* %0, %struct.isp1760_hcd** %2, align 8
  %6 = load %struct.isp1760_hcd*, %struct.isp1760_hcd** %2, align 8
  %7 = call %struct.usb_hcd* @priv_to_hcd(%struct.isp1760_hcd* %6)
  store %struct.usb_hcd* %7, %struct.usb_hcd** %4, align 8
  %8 = load %struct.usb_hcd*, %struct.usb_hcd** %4, align 8
  %9 = getelementptr inbounds %struct.usb_hcd, %struct.usb_hcd* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @HC_USBCMD, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @isp1760_readl(i64 %12)
  store i32 %13, i32* %5, align 4
  %14 = load i32, i32* @CMD_RESET, align 4
  %15 = load i32, i32* %5, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load %struct.usb_hcd*, %struct.usb_hcd** %4, align 8
  %19 = getelementptr inbounds %struct.usb_hcd, %struct.usb_hcd* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @HC_USBCMD, align 8
  %22 = add nsw i64 %20, %21
  %23 = call i32 @isp1760_writel(i32 %17, i64 %22)
  %24 = load i32, i32* @HC_STATE_HALT, align 4
  %25 = load %struct.usb_hcd*, %struct.usb_hcd** %4, align 8
  %26 = getelementptr inbounds %struct.usb_hcd, %struct.usb_hcd* %25, i32 0, i32 1
  store i32 %24, i32* %26, align 8
  %27 = load i32, i32* @jiffies, align 4
  %28 = load %struct.isp1760_hcd*, %struct.isp1760_hcd** %2, align 8
  %29 = getelementptr inbounds %struct.isp1760_hcd, %struct.isp1760_hcd* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 4
  %30 = load %struct.isp1760_hcd*, %struct.isp1760_hcd** %2, align 8
  %31 = load %struct.usb_hcd*, %struct.usb_hcd** %4, align 8
  %32 = getelementptr inbounds %struct.usb_hcd, %struct.usb_hcd* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = load i64, i64* @HC_USBCMD, align 8
  %35 = add nsw i64 %33, %34
  %36 = load i32, i32* @CMD_RESET, align 4
  %37 = call i32 @handshake(%struct.isp1760_hcd* %30, i64 %35, i32 %36, i32 0, i32 250000)
  store i32 %37, i32* %3, align 4
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local %struct.usb_hcd* @priv_to_hcd(%struct.isp1760_hcd*) #1

declare dso_local i32 @isp1760_readl(i64) #1

declare dso_local i32 @isp1760_writel(i32, i64) #1

declare dso_local i32 @handshake(%struct.isp1760_hcd*, i64, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
